login/register css fix to avoid overlap w. footer

--- a/client/src/styles/components/form.css
+++ b/client/src/styles/components/form.css
@@ -1,7 +1,3 @@
-.form-login-register {
-  margin: 2rem;
-}
-
 /* .MuiPaper-root{
   text-align: center;
   width: 20rem;
@@ -14,5 +10,5 @@
   }  */
 
 .MuiTabs-root{
-  margin-top: 3rem;
+  margin-top: 1rem;
 }
